Make all cards same size and prevent shifting of container

--- a/bow/src/styles/ServiceCards.scss
+++ b/bow/src/styles/ServiceCards.scss
@@ -1,6 +1,7 @@
 .service-card {
     transition: all 500ms ease-in-out;
     height: 480px;
+    position: relative;
 }
 
 .service-card-image {
@@ -19,8 +20,15 @@
     }
 }
 
+.service-card-footer {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+}
+
 .service-card-footer-item {
     font-weight: bold;
+    margin: auto;
 }
 
 .has-extra-margin {
